--- a/helloword.html
+++ b/helloword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Primeiro commit</title>
+	<title>Segundo commit</title>
 
 	<style type="text/css">
 		body {
@@ -22,7 +22,8 @@
 </head>
 
 <body>
-	<h1>Hello Word</h1>
+	<h1>Hello Word!</h1>
+	<h2>Olá mundo!</h2>
 </body>
 
 </html>
