--- a/helloword.html
+++ b/helloword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Segundo commit</title>
+	<title>Terceiro commit</title>
 
 	<style type="text/css">
 		body {
@@ -15,6 +15,13 @@
 			font-size: 50px;
 			text-align: center;
 			margin-top: 100px;
+		}
+
+		h2 {
+			color: #fff;
+			font-family: monospace;
+			font-size: 20px;
+			text-align: center;
 		}
 
 	</style>
